[gd_scene load_steps=3 format=3 uid="uid://befnihtjxwy32"]

[ext_resource type="Theme" uid="uid://dmi3jf6jonyoq" path="res://resources/themes/title_theme.tres" id="1_3dr1d"]
[ext_resource type="Script" uid="uid://cenn0lxa0jbxw" path="res://scripts/AARScreen.gd" id="1_ytt3w"]

[node name="AarScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ytt3w")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0156863, 0.054902, 0.0156863, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_3dr1d")
text = "MISSION DEBRIEF"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_3dr1d")
text = "Final Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RankLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_3dr1d")
text = "Rank: UNKNOWN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RetryButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
tooltip_text = "REDEPLOY"
theme = ExtResource("1_3dr1d")
text = "REDEPLOY"

[node name="MenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
tooltip_text = "REDEPLOY"
theme = ExtResource("1_3dr1d")
text = "RETURN TO HQ"

[node name="MistakesHeaderLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_3dr1d")
text = "--- ERROR LOG ---"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
